Changed continental breakfast view

--- a/views/bfast-cont.html
+++ b/views/bfast-cont.html
@@ -5,6 +5,11 @@
     <title>Continental Breakfast</title>
 </head>
 <body>
-    <h1>This is my continental breakfast page.</h1>
+    <h1>Continental Breakfast</h1>
+    <ul>
+        <li>Muffins</li>
+        <li>Bagels</li>
+        <li>Coffee</li>
+    </ul>
 </body>
 </html>
