Added an order-process route and view

--- a/views/form1.html
+++ b/views/form1.html
@@ -2,7 +2,7 @@
     <h1>Food Order</h1>
     <form method="post" action="order-process">
         <label>What would you like to order?
-            <input type="text" id="food">
+            <input type="text" name="food">
         </label>
         <input type="submit" value="Place Order">
     </form>
