--- a/views/form1.html
+++ b/views/form1.html
@@ -1,6 +1,6 @@
 <body>
     <h1>Food Order</h1>
-    <form method="post" action="order-process">
+    <form method="post" action="order2">
         <label>What would you like to order?
             <input type="text" name="food">
         </label>
